DTTS-25 feat: refresh token expirated
