# docs/swagger.yaml
@@ -1,5 +1,14 @@
 basePath: /api/v1
 definitions:
+  common.RequestChangePassword:
+    properties:
+      new_password:
+        maxLength: 100
+        minLength: 8
+        type: string
+    required:
+    - new_password
+    type: object
   common.RequestForgotPassword:
     properties:
       email:
@@ -28,6 +37,18 @@ definitions:
     required:
     - email
     - otp
+    type: object
+  common.RequestRefreshToken:
+    properties:
+      refresh_token:
+        type: string
+    required:
+    - refresh_token
+    type: object
+  common.ResponseAccessToken:
+    properties:
+      access_token:
+        type: string
     type: object
   common.ResponseError:
     properties:
@@ -91,12 +112,17 @@ paths:
       - application/json
       description: Change password for the logged-in user
       parameters:
+      - description: Bearer token for authentication
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Change password request information
         in: body
         name: request
         required: true
         schema:
-          $ref: '#/definitions/common.RequestLogin'
+          $ref: '#/definitions/common.RequestChangePassword'
       produces:
       - application/json
       responses:
@@ -188,6 +214,36 @@ paths:
           schema:
             $ref: '#/definitions/common.ResponseError'
       summary: Login to the system
+      tags:
+      - Auth
+  /auth/refresh-token:
+    post:
+      consumes:
+      - application/json
+      description: Refresh access token using refresh token
+      parameters:
+      - description: Refresh token request information
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/common.RequestRefreshToken'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/common.ResponseAccessToken'
+        "400":
+          description: Invalid request body
+          schema:
+            $ref: '#/definitions/common.ResponseError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/common.ResponseError'
+      summary: Refresh access token
       tags:
       - Auth
   /auth/register:
